# medication_object_detection_project_team2

./: .gitattributes  .gitignore  README.md  eda.ipynb  pyproject.toml  test.py  testbranch.md
Faster R-CNN/: .gitignore
Faster R-CNN/src/: config.py  dataset.py  evaluate.py  model.py  train.py  utils.py  visualize.py
Project/: .gitignore  README.md  main.py  matplotlibrc  pyproject.toml  requirements.txt
Project/data_csv/: filtered_df.csv  mappings.json
Project/data_csv/medication_data_csv/: medication_data_all.csv  medication_data_filtered.csv
Project/data_csv/model_train_data_csv/: annotation_basic.csv  annotation_bbox.csv  filtered.csv
Project/hyperparameter/yolov11/: base_hyperparameters.yaml  last_hyperparameters.yaml  test_hyperparameters_0.yaml
Project/hyperparameter/yolov11/yolo_tune/: best_hyperparameters.yaml  tune_results.csv
Project/notebooks/: category_id_name_mapping.csv  data.yaml  dataset.ipynb  eda.ipynb  excluded_annotations.csv  matched_annotations_minimal.csv  matplotlibrc  results_visualizer.ipynb  selected_annotations.csv  test.ipynb  train_annotations.csv  unmatched_annotations_minimal.csv  val_annotations.csv  visualization.ipynb
Project/src/: config.py  dataloader.py  dataset.py  evaluate.py  evaluate_final.py  main.py  test.py  train.py  transforms.py  visualize.py  yolo_evaluate.py  yolo_test.py  yolo_train.py
Project/src/models/: __init__.py  fast_rcnn.py  faster_rcnn.py  rcnn.py  ssd.py  yolo_v11.py  yolo_v5.py  yolo_v8.py
Project/src/train/: __init__.py  pytorch_train.py  yolo_train.py
Project/src/utils/: boxes.py  check_classes.py  class_mapping.py  create_dataloaders.py  data_utils.py  denormalizer.py  evaluater.py  id_mapping.py  logger.py  tensor_utils.py  visualizer.py  yolo_image_setting.py
data/ai03-level1-project/: data.yaml
data/ai03-level1-project/labels/train/: K-001900-010224-016551-031705_0_2_0_2_70_000_200.txt  K-001900-010224-016551-031705_0_2_0_2_75_000_200.txt  K-001900-010224-016551-031705_0_2_0_2_90_000_200.txt  K-001900-010224-016551-033009_0_2_0_2_70_000_200.txt  K-001900-010224-016551-033009_0_2_0_2_90_000_200.txt  K-001900-016548-018110-021026_0_2_0_2_70_000_200.txt  K-001900-016548-018110-021026_0_2_0_2_75_000_200.txt  K-001900-016548-018110-021026_0_2_0_2_90_000_200.txt  K-001900-016548-018110-027926_0_2_0_2_70_000_200.txt  K-001900-016548-018110-027926_0_2_0_2_75_000_200.txt  K-001900-016548-018110-027926_0_2_0_2_90_000_200.txt  K-001900-016548-018110-029345_0_2_0_2_70_000_200.txt  K-001900-016548-018110-029345_0_2_0_2_75_000_200.txt  K-001900-016548-018110-029345_0_2_0_2_90_000_200.txt  K-001900-016548-018110-029451_0_2_0_2_70_000_200.txt  K-001900-016548-018110-029451_0_2_0_2_75_000_200.txt  K-001900-016548-018110-031705_0_2_0_2_70_000_200.txt  K-001900-016548-018110-031705_0_2_0_2_75_000_200.txt  K-001900-016548-018110-031705_0_2_0_2_90_000_200.txt  (+1384 more)
scripts/: missiong_annotation_builder.ipynb
(+6256 files in other folders)
