[project]
name = "medication-object-detection-project-team2"
version = "0.1.0"
description = ""
authors = [
    {name = "jykim",email = "alcy1024@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
