[project]
name = "medication-object-detection-project-team2"
version = "0.1.0"
description = ""
authors = [
    {name = "jykim",email = "alcy1024@gmail.com"}
]
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "colorama (==0.4.6)",
    "filelock (==3.18.0)",
    "fsspec (==2025.5.1)",
    "jinja2 (==3.1.6)",
    "markupsafe (==3.0.2)",
    "mpmath (==1.3.0)",
    "networkx (==3.5)",
    "numpy (==2.3.1)",
    "pandas (==2.3.1)",
    "pillow (==11.3.0)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "six (==1.17.0)",
    "sympy (==1.14.0)",
    "torch (==2.7.1)",
    "torchvision (==0.22.1)",
    "tqdm (==4.67.1)",
    "typing-extensions (==4.14.1)",
    "tzdata (==2025.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
