[project]
name = "meditation-detection-project"
version = "0.1.0"
description = ""
authors = [
    {name = "jykim",email = "alcy1024@gmail.com"}
]
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "colorama (==0.4.6)",
    "filelock (==3.18.0)",
    "fsspec (==2025.5.1)",
    "jinja2 (==3.1.6)",
    "markupsafe (==3.0.2)",
    "mpmath (==1.3.0)",
    "networkx (==3.5)",
    "pandas (==2.3.1)",
    "pillow (==11.3.0)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "six (==1.17.0)",
    "sympy (==1.14.0)",
    "torch (==2.7.1)",
    "torchvision (==0.22.1)",
    "tqdm (==4.67.1)",
    "typing-extensions (==4.14.1)",
    "tzdata (==2025.2)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "albumentations (>=2.0.8,<3.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "numpy (==2.2.6)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "ultralytics (>=8.3.167,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

