[project]
name = "medication-object-detection-project-team2"
version = "0.1.0"
description = ""
authors = [
    {name = "jykim",email = "alcy1024@gmail.com"}
]
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "kaggle (>=1.7.4.5,<2.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
